--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -8,3 +8,9 @@
     type = "file"
     url = "https://raw.githubusercontent.com/josean-dev/dev-environment-files/main/.config/alacritty/themes/themes/coolnight.toml"
     refreshPeriod = "168h"
+[".local/share/fzf-git.sh"]
+    type = "archive"
+    url = "https://github.com/junegunn/fzf-git.sh/archive/main.tar.gz" 
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
